--- a/_config.yml
+++ b/_config.yml
@@ -81,11 +81,11 @@ analytics:
 author:
   name             : "Vitor S. Martins"
   avatar           : "profile.jpg"
-  bio              : PhD student in [*ABE*](https://www.abe.iastate.edu/) MSc Remote Sensing, BSc Agricultural Eng.
+  bio              : PhD student in ABE (https://www.abe.iastate.edu/), MSc Remote Sensing (http://www.inpe.br/), BSc Agricultural Eng.
   location         : "Iowa State University, Ames, IA"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=CLZIhCwAAAAJ&hl=en&oi=sra"
-  email            : "vitors@iastate.edu"
+  email            : vitors@iastate.edu
   uri              :
   bitbucket        :
   codepen          :
