--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ analytics:
 # Site Author
 author:
   name             : "Vitor S. Martins"
-  avatar           : "profile1.jpg"
-  bio              : PhD student in Agricultural Eng. (https://www.abe.iastate.edu/), MSc Remote Sensing (INPE), BSc Agricultural Eng. (UFV)
+  avatar           : "profile1.jpeg"
+  bio              : PhD student in Agricult. Eng. (https://www.abe.iastate.edu/), MSc Remote Sensing (INPE), BSc Agricultural Eng. (UFV)
   location         : "Iowa State University, Ames, IA"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=CLZIhCwAAAAJ&hl=en&oi=sra"
