--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   location         : "Iowa State University, Ames, IA"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=CLZIhCwAAAAJ&hl=en&oi=sra"
-  email            : vitors@iastate.edu
+  email            : "vitors@iastate.edu" / "vitors@iastate.edu" 
   uri              :
   bitbucket        :
   codepen          :
