--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 author:
   name             : "Vitor S. Martins"
   avatar           : "profile2.jpeg"
-  bio              : PhD student in Agricult. Eng. (https://www.abe.iastate.edu/)  MSc Remote Sensing (INPE)  BSc Agricultural Eng. (UFV)
+  bio              : PhD student in ABE Department. (https://www.abe.iastate.edu/)  MSc Remote Sensing (INPE)  BSc Agricultural Eng. (UFV)
   location         : "Iowa State University, Ames, IA"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=CLZIhCwAAAAJ&hl=en&oi=sra"
