--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 # Site Author
 author:
   name             : "Vitor S. Martins"
-  avatar           : "profile2.jpeg"
+  avatar           : "profile3.jpg"
   bio              : PhD student in ABE Dep.   (https://www.abe.iastate.edu/)  MSc Remote Sensing (INPE)  BSc Agricultural Eng. (UFV)
   location         : "Iowa State University, Ames, IA"
   employer         :
